Switch to CIS 308

--- a/docker.toml
+++ b/docker.toml
@@ -1,4 +1,4 @@
-baseURL = "https://textbooks.cs.ksu.edu/cis308"
+baseURL = "https://cis301.textbooks.cs.ksu.edu/"
 languageCode = "en-us"
 title = "CIS 308 Textbook"
 canonifyURLs = true
