--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,21 +31,20 @@ before_script:
 build-latest:
   stage: build
   only:
-    - master
-    - main
+    - tags
   script:
     - docker pull $CI_REGISTRY_IMAGE:latest || true
     - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest
 
-build-branches:
-  stage: build
-  except:
-    - master
-    - main
-  script:
-    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH || true
-    - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
+# build-branches:
+#   stage: build
+#   except:
+#     - master
+#     - main
+#   script:
+#     - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH || true
+#     - docker build --cache-from $CI_REGISTRY_IMAGE:latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH .
+#     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+#     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
